--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@openapitools/openapi-generator-cli": "^2.7.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
@@ -19,5 +20,8 @@
     "mysql": "^2.18.1",
     "swagger-ui-express": "^5.0.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7"
+  }
 }
