--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "todo-list-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon . --ignore ./swagger_output.json"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
   },
   "description": "",
   "devDependencies": {
+    "nodemon": "^3.1.4",
     "swagger-autogen": "^2.23.7"
   }
 }
