--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon . --ignore ./swagger_output.json"
+    "start": "nodemon . --ignore ./swagger_output.json",
+    "generate-swagger": "node generate-swagger.js"
   },
   "keywords": [],
   "author": "",
